we have layout bugs on right icon pane :(

--- a/VFXWindows/src/eu/mihosoft/vrl/fxwindows/default.css
+++ b/VFXWindows/src/eu/mihosoft/vrl/fxwindows/default.css
@@ -25,5 +25,6 @@
 .window-icon {
     -fx-skin: "eu.mihosoft.vrl.fxwindows.DefaultWindowIconSkin";
     -fx-border-color: rgb(255,255,255);
+    -fx-border-radius: 3;
 }
 
